# CourseWork

./: CMakeLists.txt  main.cpp
Config/: window.ini
Includes/Constants/: constans.h
Includes/Entity/: Entity.cpp  Entity.h
Includes/Game/: Game.cpp  Game.h
Includes/GameState/: GameState.cpp  GameState.h
Includes/Player/: Player.cpp  Player.h
Includes/State/: State.cpp  State.h
Includes/StateManager/: StateManager.cpp  StateManager.h
